[Fix][Zeta] Gate JAR cache disable and URLClassLoader.close behind opt-in deep clean mode