@@ -22,7 +22,11 @@ import org.apache.seatunnel.shade.com.google.common.collect.Lists;
 import org.apache.seatunnel.engine.common.exception.ClassLoaderException;
 
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.MethodOrderer;
+import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestMethodOrder;
 import org.mockito.Mockito;
 
 import com.hazelcast.cluster.Address;
@@ -39,6 +43,7 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.net.URLConnection;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -51,6 +56,7 @@ import java.util.jar.JarOutputStream;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class ClassLoaderServiceTest extends AbstractClassLoaderServiceTest {
 
     @Override
@@ -238,10 +244,169 @@ public class ClassLoaderServiceTest extends AbstractClassLoaderServiceTest {
     }
 
     @Test
-    void testJarUrlCacheDisabledOnStartup() {
+    void testDefaultPathServiceConstructionSucceeds() {
         DefaultClassLoaderService newService = new DefaultClassLoaderService(false, null);
         Assertions.assertNotNull(newService);
         newService.close();
+    }
+
+    @Test
+    @Order(1)
+    void testDefaultPathDoesNotMutateUrlCacheDefaults() throws Exception {
+        // Behavior under test: the default (non-deep-clean) path must not touch
+        // URLConnection default useCaches for any protocol. Verifies the fix for the
+        // JDK 8 global-mutation blocker raised in review.
+        //
+        // Why @Order(1): URLConnection default cache state is JVM-global and permanent.
+        // Any deep-clean test that runs before this one would have already flipped it,
+        // making the assumption below skip (and the test trivially "pass" with no actual
+        // coverage). Forcing this test to run first preserves the pristine state and
+        // makes the assertion meaningful in CI.
+        //
+        // Note on API choice: on JDK 9+, getDefaultUseCaches() (instance 0-arg) returns
+        // the JVM-wide defaultUseCaches field which is NOT updated by the per-protocol
+        // setDefaultUseCaches(String, boolean) call. We use getUseCaches() on a freshly
+        // opened connection instead, which reflects the per-protocol default consulted
+        // at URLConnection construction time on both JDK 8 and JDK 9+.
+        boolean jarBefore = new URL("jar:file://dummy.jar!/").openConnection().getUseCaches();
+        boolean httpBefore = new URL("http://localhost").openConnection().getUseCaches();
+        boolean fileBefore = new URL("file:/localhost").openConnection().getUseCaches();
+        Assumptions.assumeTrue(
+                jarBefore && httpBefore && fileBefore,
+                "URL cache defaults already mutated by a prior test; skipping");
+
+        DefaultClassLoaderService service = new DefaultClassLoaderService(false, null);
+        try {
+            Assertions.assertTrue(
+                    new URL("jar:file://dummy.jar!/").openConnection().getUseCaches(),
+                    "JAR useCaches must be preserved (not mutated) on default path");
+            Assertions.assertTrue(
+                    new URL("http://localhost").openConnection().getUseCaches(),
+                    "HTTP useCaches must be preserved (not mutated) on default path");
+            Assertions.assertTrue(
+                    new URL("file:/localhost").openConnection().getUseCaches(),
+                    "file useCaches must be preserved (not mutated) on default path");
+        } finally {
+            service.close();
+        }
+    }
+
+    @Test
+    @Order(2)
+    void testDeepCleanDisablesJarUrlCache() throws Exception {
+        // Behavior under test: when SEATUNNEL_CLASSLOADER_DEEP_CLEAN=true, the JAR
+        // URLConnection per-protocol default useCaches must be false after service
+        // construction. Verified via getUseCaches() on a freshly opened JAR connection,
+        // which is initialized from the per-protocol default at URLConnection
+        // construction time (JDK 9+) or the JVM-global default (JDK 8 fallback path).
+        // Note: on JDK 8 the fallback uses the JVM-global 1-arg toggle, so deep-clean
+        // there actually disables caching for ALL protocols (http/file included), not
+        // just JAR; the "jar-only" scope holds only on JDK 9+ via the protocol-scoped
+        // API. This test asserts only the JAR outcome, which holds on every JDK.
+        // Robust to test ordering: if a prior deep-clean test already flipped it, this
+        // assertion still holds; if this test runs first, this test itself flips it.
+        try {
+            System.setProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN, "true");
+            DefaultClassLoaderService service = new DefaultClassLoaderService(false, null);
+            try {
+                Assertions.assertFalse(
+                        new URL("jar:file://dummy.jar!/").openConnection().getUseCaches(),
+                        "JAR URLConnection useCaches must be false under deep-clean");
+            } finally {
+                service.close();
+            }
+        } finally {
+            System.clearProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN);
+        }
+    }
+
+    @Test
+    @Order(3)
+    void testDeepCleanPreservesNonJarProtocolsOnJdk9Plus() throws Exception {
+        // Behavior under test: on JDK 9+, the protocol-scoped setDefaultUseCaches("jar", false)
+        // overload must be used so non-JAR protocols (http/file) keep their default useCaches
+        // value. This is the actual fix for the nzw921rx blocker: the previous code used the
+        // JDK 8 global 1-arg API on every JDK, flipping HTTP/file defaults too.
+        boolean hasProtocolScopedApi;
+        try {
+            URLConnection.class.getMethod("setDefaultUseCaches", String.class, boolean.class);
+            hasProtocolScopedApi = true;
+        } catch (NoSuchMethodException e) {
+            hasProtocolScopedApi = false;
+        }
+        Assumptions.assumeTrue(
+                hasProtocolScopedApi,
+                "Test only meaningful on JDK 9+ with protocol-scoped setDefaultUseCaches");
+
+        try {
+            System.setProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN, "true");
+            DefaultClassLoaderService service = new DefaultClassLoaderService(false, null);
+            try {
+                Assertions.assertTrue(
+                        new URL("http://localhost").openConnection().getUseCaches(),
+                        "HTTP useCaches must be preserved on JDK 9+");
+                Assertions.assertTrue(
+                        new URL("file:/localhost").openConnection().getUseCaches(),
+                        "file useCaches must be preserved on JDK 9+");
+            } finally {
+                service.close();
+            }
+        } finally {
+            System.clearProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN);
+        }
+    }
+
+    @Test
+    @Order(4)
+    void testDeepCleanGracefulOnReflectionFailure() throws Exception {
+        // Behavior under test: when the reflective URLClassPath cache clearing fails
+        // (e.g. JDK 9+ without --add-opens java.base/jdk.internal.loader), the failure
+        // must be caught and degraded to a WARN log. The caller (releaseClassLoader /
+        // close) must not observe the exception, and the classloader must still be
+        // evicted from the cache. URLClassLoader.close() (called above the reflective
+        // hook) already released the underlying JarFile fd handles; only the
+        // stale-reference cleanup is skipped on failure.
+        File tempJar = File.createTempFile("test", ".jar");
+        URL jarUrl = tempJar.toURI().toURL();
+        System.setProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN, "true");
+        try {
+            // 'service' is effectively final (single assignment) so it can be captured
+            // by the lambdas below. Nested try/finally ensures close is invoked even if
+            // an assertion fails before the explicit close-assertion runs.
+            DefaultClassLoaderService service =
+                    new DefaultClassLoaderService(false, null) {
+                        @Override
+                        protected void clearUrlClassPathCacheReflectively(URLClassLoader cl) {
+                            // Simulate InaccessibleObjectException thrown by the JDK on JDK 9+
+                            // without --add-opens java.base/jdk.internal.loader=ALL-UNNAMED.
+                            // InaccessibleObjectException is a RuntimeException on JDK 9+ but
+                            // does not exist on JDK 8; using a plain RuntimeException keeps
+                            // this test compilable on every JDK.
+                            throw new RuntimeException(
+                                    "Simulated InaccessibleObjectException for test purposes");
+                        }
+                    };
+            try {
+                ClassLoader classLoader = service.getClassLoader(1L, Lists.newArrayList(jarUrl));
+                Assertions.assertNotNull(classLoader);
+
+                // Behavior: release must not propagate the reflective failure
+                Assertions.assertDoesNotThrow(
+                        () -> service.releaseClassLoader(1L, Lists.newArrayList(jarUrl)));
+
+                // Behavior: classloader must still be evicted from the cache
+                Assertions.assertFalse(
+                        service.queryClassLoaderById(1L, Lists.newArrayList(jarUrl)).isPresent());
+
+                // Behavior: service close must also not propagate
+                Assertions.assertDoesNotThrow(service::close);
+            } finally {
+                service.close();
+            }
+        } finally {
+            System.clearProperty(DefaultClassLoaderService.ENABLE_DEEP_CLEAN);
+            tempJar.delete();
+        }
     }
 
     @Test
